--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "league/oauth2-client": "dev-master",
         "microsoft/microsoft-graph": "^1.4",
         "overtrue/laravel-lang": "^3.0",
-        "predis/predis": "^1.1"
+        "predis/predis": "^1.1",
+        "renatomarinho/laravel-page-speed": "^1.8"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
