优化安装初始化密码

--- a/storage/app/example.config.json
+++ b/storage/app/example.config.json
@@ -18,6 +18,6 @@
     "doc": "csv doc docx odp ods odt pot potm potx pps ppsx ppsxm ppt pptm pptx rtf xls xlsx",
     "code": "html htm css go java js json ts sh md php",
     "stream": "txt log",
-    "password": "",
+    "password": "25d55ad283aa400af464c76d713c07ad",
     "hotlink_protection": ""
 }
