--- a/composer.json
+++ b/composer.json
@@ -1,15 +1,15 @@
 {
-    "name": "laravel/laravel",
-    "description": "The Laravel Framework.",
+    "name": "wangningkai/OLAINDEX",
+    "description": "✨ Another OneDrive Directory Index.",
     "keywords": [
-        "framework",
+        "OLAINDEX",
+        "OneDrive",
         "laravel"
     ],
     "license": "MIT",
     "type": "project",
     "require": {
         "php": "^7.1.3",
-        "ext-json": "*",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.7.*",
         "laravel/tinker": "^1.0",
