--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "WangNingkai/OLAINDEX",
+    "name": "wangningkai/olaindex",
     "description": "✨ Another OneDrive Directory Index.",
     "keywords": [
         "OLAINDEX",
