--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,8 @@
     "type": "project",
     "require": {
         "php": "^7.1.3",
+        "ext-json": "*",
+        "ext-bcmath": "*",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.7.*",
         "laravel/tinker": "^1.0",
@@ -43,7 +45,7 @@
         "psr-4": {
             "App\\": "app/"
         },
-        "files" : [
+        "files": [
             "app/Helpers/helpers.php"
         ]
     },
