--- a/storage/app/example.config.json
+++ b/storage/app/example.config.json
@@ -1,5 +1,6 @@
 {
-    "app_version": "v3.1",
+    "app_version": "v3.1.1",
+    "app_type": "com",
     "client_id": "",
     "client_secret": "",
     "redirect_uri": "",
