--- a/composer.json
+++ b/composer.json
@@ -32,8 +32,7 @@
         "fzaninotto/faker": "^1.4",
         "mockery/mockery": "^1.0",
         "nunomaduro/collision": "^2.0",
-        "phpunit/phpunit": "^7.0",
-        "recca0120/laravel-tracy": "^1.8"
+        "phpunit/phpunit": "^7.0"
     },
     "autoload": {
         "classmap": [
