--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@ APP_NAME=OLAINDEX
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=false
-APP_URL=http://localhost
+APP_URL=http://localhost:8000
 
 LOG_CHANNEL=stack
 # 缓存配置
