--- a/storage/app/example.config.json
+++ b/storage/app/example.config.json
@@ -8,7 +8,7 @@
     "access_token_expires": "",
     "name": "OLAINDEX",
     "theme": "flatly",
-    "root": "",
+    "root": "/",
     "expires": "10",
     "image_hosting": "1",
     "image_hosting_path": "Hosting",
@@ -20,5 +20,6 @@
     "code": "html htm css go java js json ts sh md php",
     "stream": "txt log",
     "password": "25d55ad283aa400af464c76d713c07ad",
-    "hotlink_protection": ""
+    "hotlink_protection": "",
+    "copyright": ""
 }
