--- a/storage/app/example.config.json
+++ b/storage/app/example.config.json
@@ -21,5 +21,6 @@
     "stream": "txt log",
     "password": "25d55ad283aa400af464c76d713c07ad",
     "hotlink_protection": "",
-    "copyright": ""
+    "copyright": "",
+    "statistics": ""
 }
