--- a/composer.json
+++ b/composer.json
@@ -22,8 +22,10 @@
         "ext-json": "*",
         "fideloper/proxy": "^4.0",
         "guzzlehttp/guzzle": "^6.3",
+        "hassankhan/config": "^2.0",
         "laravel/framework": "5.7.*",
         "laravel/tinker": "^1.0",
+        "matomo/ini": "^2.0",
         "overtrue/laravel-lang": "^3.0"
     },
     "require-dev": {
