--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,9 @@
         "php": "^7.1.3",
         "ext-bcmath": "*",
         "ext-json": "*",
+        "ext-mbstring": "*",
+        "ext-fileinfo": "*",
+        "ext-openssl": "*",
         "fideloper/proxy": "^4.0",
         "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "5.7.*",
