--- a/composer.json
+++ b/composer.json
@@ -19,15 +19,16 @@
     "require": {
         "php": "^7.1.3",
         "ext-bcmath": "*",
+        "ext-fileinfo": "*",
         "ext-json": "*",
         "ext-mbstring": "*",
-        "ext-fileinfo": "*",
         "ext-openssl": "*",
         "fideloper/proxy": "^4.0",
         "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "5.7.*",
         "laravel/tinker": "^1.0",
-        "overtrue/laravel-lang": "^3.0"
+        "overtrue/laravel-lang": "^3.0",
+        "php-curl-class/php-curl-class": "^8.3"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
