--- a/composer.json
+++ b/composer.json
@@ -27,8 +27,7 @@
         "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "5.7.*",
         "laravel/tinker": "^1.0",
-        "overtrue/laravel-lang": "^3.0",
-        "php-curl-class/php-curl-class": "^8.3"
+        "overtrue/laravel-lang": "^3.0"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
