--- a/composer.json
+++ b/composer.json
@@ -23,11 +23,13 @@
         "ext-json": "*",
         "ext-mbstring": "*",
         "ext-openssl": "*",
+        "ext-curl": "*",
         "fideloper/proxy": "^4.0",
         "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "5.7.*",
         "laravel/tinker": "^1.0",
-        "overtrue/laravel-lang": "^3.0"
+        "overtrue/laravel-lang": "^3.0",
+        "php-curl-class/php-curl-class": "^8.3"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
