前台简洁显示 添加图床设为首页

--- a/storage/app/example.config.json
+++ b/storage/app/example.config.json
@@ -11,6 +11,7 @@
     "theme": "flatly",
     "root": "\/",
     "expires": "10",
+    "image_home": 0,
     "image_hosting": 0,
     "image_hosting_path": "Hosting",
     "image": "bmp jpg jpeg png gif",
