添加看图模式

--- a/storage/app/example.config.json
+++ b/storage/app/example.config.json
@@ -7,10 +7,11 @@
     "access_token": "",
     "access_token_expires": "",
     "refresh_token": "",
+    "root": "\/",
     "name": "OLAINDEX",
     "theme": "flatly",
-    "root": "\/",
     "expires": "10",
+    "image_view": 0,
     "image_home": 0,
     "image_hosting": 0,
     "image_hosting_path": "Hosting",
