调试日志输出

--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,7 @@ APP_KEY=
 APP_DEBUG=false
 APP_URL=http://localhost:8000
 
-LOG_CHANNEL=stack
+LOG_CHANNEL=daily
 # 缓存配置
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
