--- a/composer.json
+++ b/composer.json
@@ -19,11 +19,12 @@
     "require": {
         "php": "^7.1.3",
         "ext-bcmath": "*",
+        "ext-curl": "*",
         "ext-fileinfo": "*",
         "ext-json": "*",
         "ext-mbstring": "*",
         "ext-openssl": "*",
-        "ext-curl": "*",
+        "arcanedev/log-viewer": "^4.6",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.7.*",
         "laravel/tinker": "^1.0",
