todo:另一种加密目录处理

--- a/storage/app/example.config.json
+++ b/storage/app/example.config.json
@@ -25,5 +25,6 @@
     "hotlink_protection": "",
     "copyright": "",
     "statistics": "",
-    "password": "25d55ad283aa400af464c76d713c07ad"
+    "password": "25d55ad283aa400af464c76d713c07ad",
+    "encrypt_path": ""
 }
