--- a/storage/app/example.config.json
+++ b/storage/app/example.config.json
@@ -26,5 +26,11 @@
     "copyright": "",
     "statistics": "",
     "password": "25d55ad283aa400af464c76d713c07ad",
-    "encrypt_path": ""
+    "encrypt_path": "",
+    "encrypt_option": [
+        "list",
+        "show",
+        "download",
+        "view"
+    ]
 }
