--- a/composer.json
+++ b/composer.json
@@ -26,10 +26,13 @@
         "ext-openssl": "*",
         "arcanedev/log-viewer": "^4.6",
         "fideloper/proxy": "^4.0",
+        "guzzlehttp/psr7": "^1.5",
         "laravel/framework": "5.7.*",
         "laravel/tinker": "^1.0",
         "overtrue/laravel-lang": "^3.0",
-        "php-curl-class/php-curl-class": "^8.3"
+        "php-curl-class/php-curl-class": "^8.3",
+        "php-http/curl-client": "^1.7",
+        "sentry/sentry-laravel": "1.0.0-beta5"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
