--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,7 @@
         "overtrue/laravel-lang": "^3.0",
         "php-curl-class/php-curl-class": "^8.3",
         "php-http/curl-client": "^1.7",
-        "sentry/sentry-laravel": "1.0.0-beta5"
+        "sentry/sentry-laravel": "^1.0.0"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
