--- a/composer.json
+++ b/composer.json
@@ -18,13 +18,8 @@
     "type": "project",
     "require": {
         "php": "^7.1.3",
-        "ext-bcmath": "*",
-        "ext-curl": "*",
-        "ext-fileinfo": "*",
-        "ext-json": "*",
-        "ext-mbstring": "*",
-        "ext-openssl": "*",
         "arcanedev/log-viewer": "^4.6",
+        "illuminate/redis": "^5.8",
         "chumper/zipper": "^1.0",
         "fideloper/proxy": "^4.0",
         "guzzlehttp/psr7": "^1.5",
@@ -35,6 +30,7 @@
         "sentry/sentry-laravel": "^1.0.0"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.2",
         "beyondcode/laravel-dump-server": "^1.0",
         "filp/whoops": "^2.0",
         "fzaninotto/faker": "^1.4",
@@ -49,7 +45,10 @@
         ],
         "psr-4": {
             "App\\": "app/"
-        }
+        },
+        "files": [
+            "app/Helpers.php"
+        ]
     },
     "autoload-dev": {
         "psr-4": {
