--- a/.env.example
+++ b/.env.example
@@ -16,3 +16,11 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 # 主题
 THEME=default
+
+CLIENT_ID=
+CLIENT_SECRET=
+
+CLIENT_ID_V21=
+CLIENT_SECRET_V21=
+
+REDIRECT_URI=
