--- a/.env.example
+++ b/.env.example
@@ -5,22 +5,25 @@ APP_DEBUG=false
 APP_URL=http://localhost:8000
 
 LOG_CHANNEL=daily
+
+DB_CONNECTION=sqlite
+#DB_HOST=127.0.0.1
+#DB_PORT=3306
+#DB_DATABASE=homestead
+#DB_USERNAME=homestead
+#DB_PASSWORD=secret
+
 # 缓存配置
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
+
 # redis配置
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
+
 # 主题
 THEME=default
 
-CLIENT_ID=
-CLIENT_SECRET=
-
-CLIENT_ID_V21=
-CLIENT_SECRET_V21=
-
-REDIRECT_URI=
