优化安装问题

--- a/.env.example
+++ b/.env.example
@@ -6,7 +6,7 @@ APP_URL=http://localhost:8000
 
 LOG_CHANNEL=daily
 
-#sqlite/myysql
+#sqlite/mysql
 DB_CONNECTION=sqlite
 #DB_HOST=127.0.0.1
 #DB_PORT=3306
