--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,14 @@ APP_DEBUG=false
 APP_URL=http://localhost:8000
 
 LOG_CHANNEL=daily
+
+DB_CONNECTION=mysql
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_DATABASE=one_drive
+DB_USERNAME=root
+DB_PASSWORD=root
+
 # 缓存配置
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
