--- a/.env.example
+++ b/.env.example
@@ -26,3 +26,7 @@ REDIS_PORT=6379
 THEME=default
 
 SENTRY_LARAVEL_DSN=
+
+ARCANEDEV_LOGVIEWER_ENABLED=true
+ARCANEDEV_LOGVIEWER_PREFIX=admin/debug
+ARCANEDEV_LOGVIEWER_MIDDLEWARE=web,auth:admin
