--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
         "fideloper/proxy": "^4.0",
         "guzzlehttp/psr7": "^1.5",
         "illuminate/redis": "^5.8",
+        "intervention/image": "^2.5",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
         "overtrue/laravel-lang": "^3.0",
