--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,10 @@
 /node_modules
 /public/hot
 /public/storage
-/storage/*.key
+/public/aria-ng/*
 /public/favicon.ico
+/resources/views/ng.blade.php
+/storage/*.key
 /vendor
 /.idea
 /.vscode
