update: .env.example

--- a/.env.example
+++ b/.env.example
@@ -30,3 +30,7 @@ SENTRY_LARAVEL_DSN=
 ARCANEDEV_LOGVIEWER_ENABLED=true
 ARCANEDEV_LOGVIEWER_PREFIX=admin/debug
 ARCANEDEV_LOGVIEWER_MIDDLEWARE=web,auth:admin
+
+GOOGLE2FA_ENABLED=true
+GOOGLE2FA_OTP_SECRET_COLUMN=tfa_secret
+GOOGLE2FA_OTP_INPUT=code
