--- a/.env.example
+++ b/.env.example
@@ -29,7 +29,7 @@ SENTRY_LARAVEL_DSN=
 
 ARCANEDEV_LOGVIEWER_ENABLED=true
 ARCANEDEV_LOGVIEWER_PREFIX=admin/debug
-ARCANEDEV_LOGVIEWER_MIDDLEWARE=web,auth:admin
+ARCANEDEV_LOGVIEWER_MIDDLEWARE=web,auth:admin,2fa
 
 GOOGLE2FA_ENABLED=true
 GOOGLE2FA_OTP_SECRET_COLUMN=tfa_secret
