complete log viewer

--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,6 @@
         "ext-json": "*",
         "ext-mbstring": "*",
         "ext-openssl": "*",
-        "arcanedev/log-viewer": "^5.0",
         "doctrine/dbal": "^2.10",
         "erusev/parsedown": "^1.7",
         "fideloper/proxy": "^4.0",
@@ -35,7 +34,8 @@
         "league/oauth2-client": "^2.4",
         "microsoft/microsoft-graph": "^1.13",
         "overtrue/laravel-lang": "^3.0",
-        "php-curl-class/php-curl-class": "^8.0"
+        "php-curl-class/php-curl-class": "^8.0",
+        "rap2hpoutre/laravel-log-viewer": "^1.6"
     },
     "require-dev": {
         "facade/ignition": "^1.4",
