--- a/composer.json
+++ b/composer.json
@@ -38,12 +38,13 @@
         "rap2hpoutre/laravel-log-viewer": "^1.6"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.3",
+        "barryvdh/laravel-ide-helper": "^2.6",
         "facade/ignition": "^1.4",
         "fzaninotto/faker": "^1.9.1",
         "mockery/mockery": "^1.0",
         "nunomaduro/collision": "^3.0",
-        "phpunit/phpunit": "^8.0",
-        "barryvdh/laravel-ide-helper": "^2.6"
+        "phpunit/phpunit": "^8.0"
     },
     "config": {
         "optimize-autoloader": true,
