--- a/composer.json
+++ b/composer.json
@@ -33,6 +33,7 @@
         "laravel/tinker": "^2.0",
         "league/oauth2-client": "^2.4",
         "microsoft/microsoft-graph": "^1.13",
+        "nette/finder": "^2.5",
         "overtrue/laravel-lang": "^3.0",
         "php-curl-class/php-curl-class": "^8.0",
         "rap2hpoutre/laravel-log-viewer": "^1.6",
