--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     "license": "MIT",
     "type": "project",
     "require": {
-        "php": "^7.2",
+        "php": "^7.2.5",
         "ext-bcmath": "*",
         "ext-curl": "*",
         "ext-fileinfo": "*",
@@ -26,11 +26,12 @@
         "ext-openssl": "*",
         "doctrine/dbal": "^2.10",
         "erusev/parsedown": "^1.7",
-        "fideloper/proxy": "^4.0",
+        "fideloper/proxy": "^4.2",
         "hashids/hashids": "^4.0",
-        "laravel/framework": "^6.2",
+        "laravel/framework": "^7.0",
         "laravel/helpers": "^1.1",
         "laravel/tinker": "^2.0",
+        "laravel/ui": "^2.0",
         "league/oauth2-client": "^2.4",
         "microsoft/microsoft-graph": "^1.13",
         "nette/finder": "^2.5",
@@ -40,13 +41,14 @@
         "spatie/laravel-short-schedule": "^1.1"
     },
     "require-dev": {
+        "laravel/telescope": "^3.5",
         "barryvdh/laravel-debugbar": "^3.3",
         "barryvdh/laravel-ide-helper": "^2.6",
-        "facade/ignition": "^1.4",
+        "facade/ignition": "^2.0",
         "fzaninotto/faker": "^1.9.1",
-        "mockery/mockery": "^1.0",
-        "nunomaduro/collision": "^3.0",
-        "phpunit/phpunit": "^8.0"
+        "mockery/mockery": "^1.3.1",
+        "nunomaduro/collision": "^4.0",
+        "phpunit/phpunit": "^8.5"
     },
     "config": {
         "optimize-autoloader": true,
