--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -1,13 +1,14 @@
+---
 name: Laravel
 
 on:
   push:
-    branches: [ 5.0 ]
+    branches: [ "5.0" ]
   pull_request:
-    branches: [ 5.0 ]
+    branches: [ "5.0" ]
 
 jobs:
-  laravel-tests:
+  laravel-preview:
 
     runs-on: ubuntu-latest
 
@@ -23,7 +24,4 @@ jobs:
         run: chmod -R 777 storage bootstrap/cache
       - name: Install App
         run: composer run install-app
-      - name: Execute tests (Unit and Feature tests) via PHPUnit
-        env:
-          DB_CONNECTION: sqlite
-        run: vendor/bin/phpunit
+...
