--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -16,10 +16,10 @@ name: Lint Code Base
 #############################
 on:
   push:
-    branches-ignore: [master]
+    branches-ignore: [ 5.0 ]
     # Remove the line above to run when pushing to master
   pull_request:
-    branches: [master]
+    branches: [ 5.0 ]
 
 ###############
 # Set the Job #
@@ -48,6 +48,6 @@ jobs:
         uses: docker://github/super-linter:v3
         env:
           VALIDATE_ALL_CODEBASE: false
-          DEFAULT_BRANCH: master
+          DEFAULT_BRANCH: 5.0
 
 ...
