--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -16,10 +16,10 @@ name: Lint Code Base
 #############################
 on:
   push:
-    branches-ignore: [ 5.0 ]
+    branches-ignore: [ "5.0" ]
     # Remove the line above to run when pushing to master
   pull_request:
-    branches: [ 5.0 ]
+    branches: [ "5.0" ]
 
 ###############
 # Set the Job #
