--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -48,6 +48,7 @@ jobs:
         uses: docker://github/super-linter:v3
         env:
           VALIDATE_ALL_CODEBASE: false
+          VALIDATE_PHP: true
           DEFAULT_BRANCH: 5.0
 
 ...
