--- a/composer.json
+++ b/composer.json
@@ -28,23 +28,24 @@
         "erusev/parsedown": "^1.7",
         "fideloper/proxy": "^4.2",
         "hashids/hashids": "^4.0",
-        "laravel/framework": "^7.0",
+        "laravel/framework": "^8.0",
         "laravel/helpers": "^1.1",
         "laravel/tinker": "^2.0",
-        "laravel/ui": "^2.0",
+        "laravel/ui": "^3.0",
         "microsoft/microsoft-graph": "^1.13",
         "overtrue/laravel-lang": "^3.0",
         "php-curl-class/php-curl-class": "^8.0",
-        "rap2hpoutre/laravel-log-viewer": "^1.6"
+        "rap2hpoutre/laravel-log-viewer": "^1.6",
+        "guzzlehttp/guzzle": "^7.0.1"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.3",
         "barryvdh/laravel-ide-helper": "^2.6",
-        "facade/ignition": "^2.0",
+        "facade/ignition": "^2.3.6",
         "fzaninotto/faker": "^1.9.1",
         "mockery/mockery": "^1.3.1",
-        "nunomaduro/collision": "^4.0",
-        "phpunit/phpunit": "^8.5"
+        "nunomaduro/collision": "^5.0",
+        "phpunit/phpunit": "^9.0"
     },
     "config": {
         "optimize-autoloader": true,
