[#] 更新依赖&优化加密

--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     "license": "MIT",
     "type": "project",
     "require": {
-        "php": "^7.4",
+        "php": "^7.3",
         "ext-bcmath": "*",
         "ext-curl": "*",
         "ext-fileinfo": "*",
@@ -27,19 +27,20 @@
         "doctrine/dbal": "^2.10",
         "erusev/parsedown": "^1.7",
         "fideloper/proxy": "^4.2",
+        "guzzlehttp/guzzle": "^7.0.1",
         "hashids/hashids": "^4.0",
+        "laravel-lang/lang": "~7.0",
         "laravel/framework": "^8.0",
-        "laravel/helpers": "^1.1",
+        "laravel/helpers": "^1.3",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^3.0",
-        "microsoft/microsoft-graph": "^1.13",
-        "overtrue/laravel-lang": "^3.0",
+        "microsoft/microsoft-graph": "^1.2",
+        "overtrue/laravel-lang": "^4.2",
         "php-curl-class/php-curl-class": "^8.0",
-        "rap2hpoutre/laravel-log-viewer": "^1.6",
-        "guzzlehttp/guzzle": "^7.0.1"
+        "rap2hpoutre/laravel-log-viewer": "^1.6"
     },
     "require-dev": {
-        "barryvdh/laravel-debugbar": "^3.3",
+        "barryvdh/laravel-debugbar": "^3.5",
         "barryvdh/laravel-ide-helper": "^2.6",
         "facade/ignition": "^2.3.6",
         "fzaninotto/faker": "^1.9.1",
