--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,6 +1,6 @@
 # These are supported funding model platforms
 
-github: [wangningkai]
+github: #
 patreon: wangningkai
 open_collective: # Replace with a single Open Collective username
 ko_fi: # Replace with a single Ko-fi username
